GG - added includeRaw and changed shape of response to an object that exposes a normalzied property, and raw when requested.
