# openapi.json
@@ -258,6 +258,17 @@
               "example": false,
               "default": false
             }
+          },
+          {
+            "in": "query",
+            "name": "includeRaw",
+            "required": false,
+            "description": "When true, this endpoint will include the raw RIDB response, useful for debugging.\n",
+            "schema": {
+              "type": "boolean",
+              "example": false,
+              "default": false
+            }
           }
         ],
         "responses": {
